=== HEAD

* Recognize disconnections when issuing BEGIN/ROLLBACK/COMMIT statements (jeremyevans) (#368)

=== 3.25.0 (2011-07-01)

* Work with tiny_tds-0.4.5 in the tinytds adapter, older versions are no longer supported (jeremyevans)

* Make association_pks plugin typecast provided values to integer if the primary key column type is integer (jeremyevans)
 
* Model.set_dataset now accepts Identifier, QualifiedIdentifier, and AliasedExpression arguments (jeremyevans)

* Fix handling of nil values in bound variables and prepared statement and stored procedure arguments in the jdbc adapter (jeremyevans, wei)

* Allow treating Datasets as Expressions, e.g. DB[:table1].select(:column1) > DB[:table2].select(:column2) (jeremyevans)

* No longer use CASCADE by default when dropping tables on PostgreSQL (jeremyevans)

* Support :cascade option to #drop_table, #drop_view, #drop_column, and #drop_constraint for using CASCADE (jeremyevans)

* If validation error messages are LiteralStrings, don't add the column name to them in Errors#full_messages (jeremyevans)

* Fix bug loading plugins on 1.9 where ::ClassMethods, ::InstanceMethods, or ::DatasetMethods is defined (jeremyevans)

* Add Dataset#exclude_where and Dataset#exclude_having methods, so you can force use of having or where clause (jeremyevans)

* Allow Dataset#select_all to take table name arguments and select all columns from each given table (jeremyevans)

* Add Dataset#select_group method, for selecting and grouping on the same columns (jeremyevans)

* Allow Dataset#group and Dataset#group_and_count to accept a virtual row block (jeremyevans)

=== 3.24.1 (2011-06-03)

* Ignore index creation errors if using create_table? with the IF NOT EXISTS syntax (jeremyevans) (#362)

=== 3.24.0 (2011-06-01)

* Add prepared_statements_association plugin, for using prepared statements by default for regular association loading (jeremyevans)
